applied string format